add href in btn

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container text-left">
             <h1 class="display-4">Hello, I'am a<br />Web <span>Developer</span></h1>
-            <a href="#" onclick="alert('JOIN WITH US')" class="btn btn-primary tombol">About Me</a
+            <a href="#about" class="btn btn-primary tombol">About Me</a
         >
       </div>
     </div>
@@ -106,7 +106,7 @@
             VueJS/ReactJS and working knowledge of Design System. Well-versed in
             Scrum and Agile.
           </p>
-          <a href="#" class="btn btn-primary tombol">Gallery</a>
+          <a href="#contact-me" class="btn btn-primary tombol">Hire Me!</a>
         </div>
     </div>
     <!-- Akhir Bio -->
